# AGO

./: .gitignore  CMakeLists.txt  README.md  repomix-output.xml
.github/scripts/: review.py
.github/workflows/: gemini-review.yml
Algorithm/: Algorithm.h  CMakeLists.txt
Function/: CMakeLists.txt  Function.h
Interval/: CMakeLists.txt  Interval.h
Logger/: Logger.h
Point/: CMakeLists.txt  Point.h
VisualAGP/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
VisualAGP/AGO/: CMakeLists.txt
VisualAGP/AGO/Algorithm/: Algorithm.h  CMakeLists.txt
VisualAGP/AGO/Function/: CMakeLists.txt  Function.h
VisualAGP/AGO/Interval/: CMakeLists.txt
VisualAGP/AGO/Point/: CMakeLists.txt  Point.h
VisualAGP/AGO/main/: CMakeLists.txt  main.cpp
main/: CMakeLists.txt  TestRunner.h  main.cpp
src/core/Algorithm/: Algorithm.h  CMakeLists.txt
src/core/Interval/: CMakeLists.txt  Interval.h
src/core/Point/: CMakeLists.txt  Point.h
src/main/: CMakeLists.txt  TestRunner.h  main.cpp
tests/: CMakeLists.txt
tests/sample_src/: HansenProblem.hpp  HansenProblemFamily.hpp  OptSqConstrProblem.hpp
tests/sample_src/GKLS/: GKLSConstrainedProblem.cpp  GKLSConstrainedProblem.hpp  GKLSConstrainedProblemFamily.hpp  GKLSOption.cpp  GKLSOption.hpp  GKLSProblem.cpp  GKLSProblem.hpp  gkls_random.cpp
tests/sample_src/Grishagin/: GrishaginConstrainedProblem.cpp  GrishaginConstrainedProblem.hpp  GrishaginConstrainedProblemFamily.hpp  GrishaginOption.hpp  GrishaginProblemFamily.hpp  grishagin_function.cpp
tests/src/: Evolvent.cpp  IGeneralOptProblem.hpp
